VA-1126 Prevent focus indicator cutoff

--- a/src/styles/navigation-line.css
+++ b/src/styles/navigation-line.css
@@ -171,6 +171,9 @@
   font-size: 0.65em;
 }
 
+.h5p-course-presentation .h5p-footer .current-slide-title:empty {
+  display: none;
+}
 
 .h5p-course-presentation .h5p-footer [aria-expanded="true"].h5p-footer-toggle-keywords .current-slide-title:before {
   -ms-transform: rotate(90deg);
@@ -388,7 +391,7 @@
 .h5p-course-presentation .h5p-footer [role="button"]:focus-visible,
 .h5p-course-presentation .h5p-footer .h5p-footer-button:focus-visible {
   outline: 2px ridge var(--h5p-theme-main-cta-base);
-  outline-offset: 2px;
+  outline-offset: -2px;
 }
 
 .using-mouse .h5p-course-presentation .h5p-footer .h5p-footer-button.h5p-footer-toggle-keywords:focus {
